adding wgk extraction

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -101,6 +101,8 @@
           'P370+P378',
           'P403',
         ],
+        ghs: ['GHS01'],
+        wgk: '1'
       };
 
       uploadBtn.addEventListener('click', async () => {
