--- a/frontend/index.html
+++ b/frontend/index.html
@@ -21,7 +21,7 @@
       rel="stylesheet"
       type="text/css"
     />
-    <script src="https://unpkg.com/@alenaksu/json-viewer@latest"></script>
+    <script src="https://unpkg.com/@alenaksu/json-viewer@0.3.4"></script>
     <title>SDB-Extractor</title>
     <style>
       json-viewer {
